<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/app_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/light_gray" android:gravity="center" android:background="@color/fragment_all_station_info_title_bg" android:paddingTop="@dimen/dp_h5" android:paddingBottom="@dimen/dp_h5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_h50" android:text="@string/str_all_stations_info" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h24" android:autoSizeMaxTextSize="@dimen/dp_h28" />
    <ListView android:id="@id/list_all_station_info" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:listSelector="@color/translucent" android:cacheColorHint="#00000000" android:divider="@drawable/list_item_split_line" android:dividerHeight="1.0dip" android:layout_weight="1.0" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_h10" android:layout_marginBottom="@dimen/dp_h10">
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <Button android:textColor="@color/light_gray" android:ellipsize="end" android:id="@id/btn_delete_station" android:background="@drawable/btn_all_station_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_delete_station" android:lines="1" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h18" android:autoSizeMaxTextSize="@dimen/dp_h22" />
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <Button android:textColor="@color/light_gray" android:ellipsize="end" android:id="@id/btn_add_station" android:background="@drawable/btn_all_station_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_add_station" android:lines="1" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h18" android:autoSizeMaxTextSize="@dimen/dp_h22" />
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <Button android:textColor="@color/light_gray" android:ellipsize="end" android:id="@id/btn_cancel" android:background="@drawable/btn_all_station_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_btn_cancel" android:lines="1" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h18" android:autoSizeMaxTextSize="@dimen/dp_h22" />
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>