<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/app_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/light_gray" android:gravity="center" android:background="@color/fragment_all_station_info_title_bg" android:paddingTop="@dimen/dp_h5" android:paddingBottom="@dimen/dp_h5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_h50" android:text="@string/str_add_station" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h24" android:autoSizeMaxTextSize="@dimen/dp_h28" />
    <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <ImageButton android:id="@id/btn_decrease" android:background="@drawable/btn_fm_decrease_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/app_name" />
        <com.android.fmradio.views.MarqueeTextView android:textColor="@color/light_gray" android:ellipsize="marquee" android:gravity="center" android:id="@id/tv_station" android:focusable="true" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:includeFontPadding="false" android:layout_weight="8.0" android:marqueeRepeatLimit="marquee_forever" android:paddingStart="@dimen/dp_w10" android:paddingEnd="@dimen/dp_w10" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h60" android:autoSizeMaxTextSize="@dimen/dp_h76" />
        <ImageButton android:id="@id/btn_increase" android:background="@drawable/btn_fm_increase_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/app_name" />
        <Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="2.0" />
    <EditText android:gravity="center_horizontal" android:id="@id/et_station_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="- -" android:maxLength="16" android:inputType="text" />
    <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="2.0" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <Button android:textColor="@color/light_gray" android:ellipsize="end" android:id="@id/btn_ok" android:background="@drawable/btn_all_station_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_btn_ok" android:lines="1" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h18" android:autoSizeMaxTextSize="@dimen/dp_h22" />
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="2.0" />
        <Button android:textColor="@color/light_gray" android:ellipsize="end" android:id="@id/btn_cancel" android:background="@drawable/btn_all_station_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_btn_cancel" android:lines="1" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/dp_h18" android:autoSizeMaxTextSize="@dimen/dp_h22" />
        <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>